Set header height to fix bg overlap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -115,7 +115,7 @@ ul, ol{list-style:none;margin:0;padding:0}
 body>header{padding:20px 0}
 body>header h2{margin:0}
 body>header h2 a{font-size:1.4rem;line-height:1.4rem;color:inherit;text-decoration:none}
-body>header>div{display:flex;align-items:center}
+body>header>div{display:flex;align-items:center;height:47px}
 .menu{flex-grow:1}
 .menu ul{display:flex;justify-content:center; gap:30px}
 #menubtn{display:none}
